# sakura-core

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: fastapi_ci.yaml  fastapi_provider_ci.yaml  fastapi_provider_publish.yaml  sakura_core_publish.yaml
.github/workflows/fastapi/: ci.yaml
sakura/: __init__.py  exceptions.py  microservice.py  pyproject.toml  sakura.py
sakura-fastapi-provider/: pyproject.toml
sakura-fastapi-provider/sakura/providers/fastapi_provider/: provider.py  test_provider.py
sakura-rabbitmq/sakura/pubsub/rabbitmq/: pubsub_client.py  subscriber.py
sakura/cli/: asyncio_utils.py  exceptions.py  main.py  utils.py
sakura/core/: __init__.py  exceptions.py  microservice.py  sakura.py
sakura/core/decoders/: json_decoder.py
sakura/core/logging/: logger.py  loguru.py
sakura/core/providers/: __init__.py  fastapi_provider.py  provider.py  rabbitmq_provider.py
sakura/core/pubsub/: client.py  subscriber.py  types.py
sakura/core/rabbitmq/: rabbitmq_client.py  rabbitmq_subscriber.py  types.py
sakura/core/settings/: settings.py
sakura/core/tests/: mocks.py
sakura/core/transporters/: __init__.py  settings.py  transporter.py
sakura/core/transporters/cron/: __init__.py
sakura/core/transporters/http/: __init__.py  http_client.py  http_transporter.py
sakura/core/transporters/http/fastapi/: __init__.py  fastapi_client.py
sakura/core/transporters/pubsub/: __init__.py  pubsub_transporter.py
sakura/core/transporters/pubsub/middleware/: __init__.py  decode_middleware.py  error_handling_middleware.py  execute_middleware.py
sakura/core/utils/: __init__.py  decorators.py  factory.py
sakura/decoders/: __init__.py  decoder.py  json_decoder.py
sakura/logging/: __init__.py  logger.py  loguru.py
sakura/providers/: __init__.py  fastapi_provider.py  provider.py  rabbitmq_provider.py
sakura/providers/fastapi/: provider.py
sakura/providers/fastapi_provider/: provider.py
sakura/providers/rabbitmq_provider/: provider.py
sakura/providers/rabbitmq_provider/rabbitmq_client/: __init__.py  client.py  settings.py
sakura/pubsub/: __init__.py  client.py  factory.py  settings.py  subscriber.py  types.py
sakura/pubsub/middlewares/: __init__.py  asyncify_middleware.py  exception_handler_middleware.py  middleware.py
sakura/pubsub/rabbitmq/: pubsub_client.py  settings.py  subscriber.py
sakura/pubsub/rabbitmq/middlewares/: ack_middleware.py  decode_middleware.py  execution_middleware.py
sakura/pubsub/rabbitmq/rabbitmq_client/: client.py  types.py
sakura/rabbitmq/: __init__.py  rabbitmq_client.py  rabbitmq_subscriber.py
sakura/sakura/: microservice.py  sakura.py
sakura/sakura/logging/: __init__.py
sakura/sakura/providers/: __init__.py  provider.py
sakura/sakura/pubsub/: __init__.py  client.py
sakura/sakura/pubsub/middlewares/: __init__.py  asyncify_middleware.py  dynamic_self_func_middleware.py
sakura/sakura/pubsub/rabbitmq/: pubsub_client.py  settings.py  subsriber.py
sakura/sakura/pubsub/rabbitmq/middlewares/: __init__.py  ack_middleware.py  asyncify_middleware.py  decode_middleware.py  dynamic_self_func_middleware.py
sakura/sakura/pubsub/rabbitmq/rabbitmq_client/: __init__.py  client.py  settings.py
sakura/sakura/rabbitmq/: rabbitmq_subscriber.py
sakura/sakura/settings/: settings.py
sakura/sakura/utils/: decorators.py
sakura/settings/: __init__.py  settings.py
sakura/tests/: mocks.py
sakura/utils/: __init__.py  decorators.py  factory.py  types.py  utils.py
samples/: pyproject.toml
samples/basic_service/: basic_service.py  settings.yaml
samples/pubsub_service/: pubsub_service.py  setting.yaml  settings.yaml
