[tool.poetry]
name = "sakura"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
aio-pika = "9.0.4"
loguru = "^0.7.0"
dynaconf = "^3.2.0"
asyncer = "^0.0.2"
uvloop = { version = "^0.17.0", optional = true }
uvicorn = { version = "^0.23.1", optional = true }
fastapi = { version = "0.78.0", optional = true }

[tool.poetry.extras]
uvloop = ["uvloop"]
fastapi = ["fastapi", "uvicorn"]

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120  # defaults to 88 like black
target-version = "py39"  # the python version to target, useful when considering code upgrades, defaults to "py310"

select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "UP",  # pyupgrade
  "I",   # isort
  "N",   # pep8-naming
  "S",   # flake8-bandit
  "BLE", # flake8-blind-except
  "A",   # flake8-builtins
  "C4",  # flake8-comprehensions
  "DTZ", # flake8-datetimez
  "ICN", # flake8-import-conventions
  "INP", # flake8-no-pep420
  "PIE", # flake8-pie
  "T20", # flake8-print
  "PYI", # flake8-pyi
  "PT",  # flake8-pytest-style
  "Q",   # flake8-quotes
  "RSE", # flake8-raise
  "RET", # flake8-return
  "SIM", # flake8-simplify
  "TID", # flake8-tidy-imports
  "TCH", # flake8-type-checking
  "ARG", # flake8-unused-arguments
  "PTH", # flake8-use-pathlib
  "PGH", # pygrep-hooks
  "PL",  # Pylint
  "RUF", # Ruff-specific rules
  "COM", # flake8-commas
]

[tool.ruff.per-file-ignores]
"samples/basic_service/basic_service.py" = ["F821"]
"*/test_*.py" = ["S101"]
