[tool.poetry]
name = "sakura"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
loguru = "^0.7.0"
dynaconf = "^3.2.1"
asyncer = "^0.0.2"
uvloop = { version = "^0.17.0", optional = true }
python-dotenv = "^1.0.0"

[tool.poetry.extras]
uvloop = ["uvloop"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pre-commit = "^3.3.3"

[tool.poetry.group.sakura-fastapi-provider-dev.dependencies]
fastapi = "<0.100.0"
uvicorn = "^0.23.2"

[tool.poetry.group.sakura-rabbitmq-dev.dependencies]
aio-pika = "^9.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py39"

select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "UP",  # pyupgrade
  "I",   # isort
  "N",   # pep8-naming
  "S",   # flake8-bandit
  "BLE", # flake8-blind-except
  "A",   # flake8-builtins
  "C4",  # flake8-comprehensions
  "DTZ", # flake8-datetimez
  "ICN", # flake8-import-conventions
  "INP", # flake8-no-pep420
  "PIE", # flake8-pie
  "T20", # flake8-print
  "PYI", # flake8-pyi
  "PT",  # flake8-pytest-style
  "Q",   # flake8-quotes
  "RSE", # flake8-raise
  "RET", # flake8-return
  "SIM", # flake8-simplify
  "TID", # flake8-tidy-imports
  "TCH", # flake8-type-checking
  "ARG", # flake8-unused-arguments
  "PTH", # flake8-use-pathlib
  "PGH", # pygrep-hooks
  "PL",  # Pylint
  "RUF", # Ruff-specific rules
  "COM", # flake8-commas
]

[tool.ruff.per-file-ignores]
"samples/*/*_service.py" = ["F821"]
"*/test_*.py" = ["S101"]
