[tool.poetry]
name = "sakura-core"
version = "0.1.0"
description = ""
authors = []
packages = [{include = "sakura"}]

[tool.poetry.dependencies]
python = "^3.9"
loguru = "^0.7.0"
dynaconf = "^3.2.0"
asyncer = "^0.0.2"
uvloop = { version = "^0.17.0", optional = true }

[tool.poetry.extras]
uvloop = ["uvloop"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
