[tool.poetry]
name = "sakura-core"
version = "0.1.2"
description = ""
authors = []
packages = [{ include = "sakura" }]

[tool.poetry.dependencies]
python = "^3.11"
loguru = "^0.7.0"
dynaconf = "^3.2.0"
asyncer = "^0.0.2"
uvloop = { version = "^0.17.0", optional = true }
pydantic = "^1.10.12"
python-dotenv = "^1.0.0"

[tool.poetry.extras]
uvloop = ["uvloop"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pre-commit = "^3.3.3"
black = "^23.7.0"

[tool.poetry.group.rabbitmq-dev.dependencies]
aio-pika = "^9.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
