[tool.poetry]
name = "sakura"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvloop = { version = "^0.17.0", optional = true }
sakura-core = {path = "../sakura"}
sakura-fastapi-provider = { version = "^0.1.0", optional = true }
aio-pika = "9.0.4"

[tool.poetry.extras]
uvloop = ["uvloop"]
fastapi = ["sakura-fastapi-provider"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
